Share link spacing fix.

--- a/client/devel.import.less
+++ b/client/devel.import.less
@@ -652,8 +652,7 @@ footer {
 
 .copy-game-link {
   background: @brand-primary;
-  margin-bottom: @grid-gutter-width/2;
-  margin-left: @grid-gutter-width/2;
+  padding: 0 0 @grid-gutter-width/2 @grid-gutter-width/2;
   width: 100%;
   @media (min-width: @screen-sm-min) {
     margin-left: 0;
@@ -665,7 +664,7 @@ footer {
     border-radius: @border-radius-small;
     color: @white;
     padding: 6px 12px;
-    width: 82%;
+    width: 86%;
     @media (min-width: @screen-sm-min) {
       width: 94%;
     }
